you can now squash the bugs, but there are bugs (haha) that need to be fixed with it

--- a/src/stylesheets/bugsquasher.css
+++ b/src/stylesheets/bugsquasher.css
@@ -17,6 +17,15 @@
     position: absolute
 }
 
+#splatter {
+    height: 50px;
+    width: 50px;
+    color: salmon;
+    animation: none !important;
+    transition: none !important;
+    position: absolute;
+}
+
 .bug:hover {
     cursor: pointer;
 }
